# GnuPlotScripting

./: .clang-format  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.org  meson.build
examples/: array_2.cpp  available_export_formats.cpp  density_plot.cpp  density_plot_data.txt  filled_curves.cpp  global_config.cpp  graph.cpp  hello.cpp  histogram.cpp  matrix.cpp  meson.build  pipe.cpp  plot.cpp
src/: meson.build
src/GnuPlotScripting/: GnuPlotScripting.hpp  array_2.hpp  data.cpp  data.hpp  data_array_2.cpp  data_array_2.hpp  data_ascii.hpp  data_std_vector.hpp  data_supervised.hpp  data_vector.hpp  detection_idiom.hpp  export_as.cpp  export_as.hpp  global_config.cpp  global_config.hpp  hello.cpp  hello.hpp  meson.build  script.cpp  script.hpp  script_file_mode_enum.hpp  script_pipe_mode_enum.hpp
subprojects/: fmt.wrap
test/: data.cpp  data_std_vector.cpp  data_supervised.cpp  data_vector.cpp  export_as.cpp  global_config.cpp  hello.cpp  meson.build
