executable('matrix',
	   'matrix.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('filled_curves',
	   'filled_curves.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('graph',
	   'graph.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('histogram',
	   'histogram.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('pipe',
	   'pipe.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('plot',
	   'plot.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('global_config',
	   'global_config.cpp',
	   dependencies : [GnuPlotScripting_dep])
