configure_file(input: 'density_plot_data.txt', output: 'density_plot_data.txt', copy: true)

executable('array_2',
	   'array_2.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('matrix',
	   'matrix.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('filled_curves',
	   'filled_curves.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('graph',
	   'graph.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('histogram',
	   'histogram.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('pipe',
	   'pipe.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('plot',
	   'plot.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('global_config',
	   'global_config.cpp',
	   dependencies : [GnuPlotScripting_dep])

executable('available_export_formats',
	   'available_export_formats.cpp',
	   dependencies : [GnuPlotScripting_dep])


executable('density_plot',
	   'density_plot.cpp',
	   dependencies : [GnuPlotScripting_dep])
